--- a/start/package.json
+++ b/start/package.json
@@ -4,18 +4,24 @@
   "description": "A sample Slack Botkit bot.",
   "main": "kittenbot.js",
   "dependencies": {
+    "@google-cloud/secret-manager": "2.1.0",
     "botbuilder-adapter-slack": "^1.0.8",
     "botkit": "^4.6.2",
-    "@google-cloud/secret-manager": "2.1.0"
+    "request": "^2.88.0",
+    "save": "^2.9.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/googlecodelabs/cloud-slack-bot.git"
+    "url": "git+https://github.com/googlecodelabs/cloud-slack-bot.git"
   },
   "author": "Google Inc.",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/googlecodelabs/cloud-slack-bot/issues"
+  },
+  "homepage": "https://github.com/googlecodelabs/cloud-slack-bot#readme",
+  "keywords": []
 }
